# SLAE

./: CMakeLists.txt  TestTridiagonalMatrix.cpp  TridiagonalMatrix.cpp  TridiagonalMatrix.h  TridiagonalMatrixSolver.h
Matrix/: TridiagonalMatrix.h
Solvers/: TridiagonalMatrixSolver.h
Tests/: TestTridiagonalMatrix.cpp
src/: CMakeLists.txt  TridiagonalMatrixSolver.h
src/Matrix/: CSR.h  DenseMatrix.h  Householder.h  TridiagonalMatrix.h
src/Solver/: CG.h  GaussSeidel.h  Jacobi.h  SimpleIteration.h
src/Solvers/: TridiagonalMatrixSolver.h
src/Utilities/: Norm.h  Overload.h
tests/: CMakeLists.txt  CSR_test.cpp  Dense_test.cpp  Iteration_test.cpp  Samostoyatelnaya.cpp  SimpleIteration_test.cpp  TestTridiagonalMatrix.cpp  threediagonal_test.cpp  tridiagonal_test.cpp
tests/log/: CG.txt  Delta_Lambda.txt  FGD.txt  MPI_1.txt  MPI_2.txt  MPI_CHEB.txt  SOR.txt  SSOR.txt  gaussseidel.txt  jacobi.txt
